// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PadBank matches snapshot at volume 0 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#666",
            "fontSize": 8,
            "fontWeight": "700",
            "letterSpacing": 2,
            "marginBottom": 4,
          }
        }
      >
        VOLUME
      </Text>
      <View
        style={
          {
            "paddingHorizontal": 8,
            "width": "100%",
          }
        }
      >
        <View
          maximumTrackTintColor="#333"
          maximumValue={1}
          minimumTrackTintColor="#888"
          minimumValue={0}
          onValueChange={[MockFunction]}
          style={
            {
              "height": 32,
              "width": "100%",
            }
          }
          testID="slider"
          thumbTintColor="#ccc"
          value={0}
        />
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      collapsable={false}
      entering={
        FadeIn {
          "build": [Function],
          "durationV": 300,
          "randomizeDelay": false,
          "reduceMotionV": "system",
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#222",
              "borderColor": "#555",
              "borderRadius": 32,
              "borderWidth": 2,
              "elevation": 8,
              "height": 64,
              "justifyContent": "center",
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.6,
              "shadowRadius": 6,
              "width": 64,
            },
            false,
            false,
          ]
        }
        testID="play-pause-btn"
      >
        <Svg
          fill="#fff"
          height={26}
          stroke="#fff"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          width={26}
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
            fill="#fff"
            stroke="#fff"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </Svg>
      </View>
    </View>
  </View>
</View>
`;

exports[`PadBank matches snapshot when idle 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#666",
            "fontSize": 8,
            "fontWeight": "700",
            "letterSpacing": 2,
            "marginBottom": 4,
          }
        }
      >
        VOLUME
      </Text>
      <View
        style={
          {
            "paddingHorizontal": 8,
            "width": "100%",
          }
        }
      >
        <View
          maximumTrackTintColor="#333"
          maximumValue={1}
          minimumTrackTintColor="#888"
          minimumValue={0}
          onValueChange={[MockFunction]}
          style={
            {
              "height": 32,
              "width": "100%",
            }
          }
          testID="slider"
          thumbTintColor="#ccc"
          value={0.8}
        />
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      collapsable={false}
      entering={
        FadeIn {
          "build": [Function],
          "durationV": 300,
          "randomizeDelay": false,
          "reduceMotionV": "system",
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#222",
              "borderColor": "#555",
              "borderRadius": 32,
              "borderWidth": 2,
              "elevation": 8,
              "height": 64,
              "justifyContent": "center",
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.6,
              "shadowRadius": 6,
              "width": 64,
            },
            false,
            false,
          ]
        }
        testID="play-pause-btn"
      >
        <Svg
          fill="#fff"
          height={26}
          stroke="#fff"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          width={26}
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
            fill="#fff"
            stroke="#fff"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </Svg>
      </View>
    </View>
  </View>
</View>
`;

exports[`PadBank matches snapshot when playing 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#666",
            "fontSize": 8,
            "fontWeight": "700",
            "letterSpacing": 2,
            "marginBottom": 4,
          }
        }
      >
        VOLUME
      </Text>
      <View
        style={
          {
            "paddingHorizontal": 8,
            "width": "100%",
          }
        }
      >
        <View
          maximumTrackTintColor="#333"
          maximumValue={1}
          minimumTrackTintColor="#888"
          minimumValue={0}
          onValueChange={[MockFunction]}
          style={
            {
              "height": 32,
              "width": "100%",
            }
          }
          testID="slider"
          thumbTintColor="#ccc"
          value={0.8}
        />
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      collapsable={false}
      entering={
        FadeIn {
          "build": [Function],
          "durationV": 300,
          "randomizeDelay": false,
          "reduceMotionV": "system",
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#222",
              "borderColor": "#555",
              "borderRadius": 32,
              "borderWidth": 2,
              "elevation": 8,
              "height": 64,
              "justifyContent": "center",
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.6,
              "shadowRadius": 6,
              "width": 64,
            },
            {
              "backgroundColor": "#c9302c",
              "borderColor": "#ff5c5c",
            },
            false,
          ]
        }
        testID="play-pause-btn"
      >
        <Svg
          fill="#fff"
          height={22}
          stroke="#fff"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <Rect
            fill="#fff"
            height="18"
            rx="2"
            stroke="#fff"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
            width="18"
            x="3"
            y="3"
          />
        </Svg>
      </View>
    </View>
  </View>
</View>
`;
